[gd_scene load_steps=11 format=3 uid="uid://cvtyk1yptei6j"]

[ext_resource type="Texture2D" uid="uid://cimiuh58asgku" path="res://assets/floor_industrial.png" id="1_00coo"]
[ext_resource type="Script" uid="uid://dkmwh6fquqomv" path="res://scripts/PolygonRoom.gd" id="2_dnqvi"]
[ext_resource type="Texture2D" uid="uid://dmtomufb8r7o7" path="res://assets/wall_concrete.png" id="3_i178v"]
[ext_resource type="Script" uid="uid://dneg2i4v7ocvd" path="res://scripts/ShadowExtruder.gd" id="4_qtn3g"]
[ext_resource type="PackedScene" uid="uid://b8x6yq4l4y4w" path="res://scenes/Player.tscn" id="5_tgxag"]
[ext_resource type="PackedScene" uid="uid://c7x6yq4l4y50" path="res://scenes/Debris.tscn" id="6_ngroq"]
[ext_resource type="Texture2D" uid="uid://lbrsyy7qd0b" path="res://assets/light_texture.png" id="7_216fe"]
[ext_resource type="Texture2D" uid="uid://b3ivpr0tplnfv" path="res://assets/placeholder/arrow.jpg" id="8_dnqvi"]
[ext_resource type="Script" uid="uid://cxxfn3rfo4l7x" path="res://scripts/Main.gd" id="9_main"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dnqvi"]
size = Vector2(20.11441, 45.89897)

[node name="Main" type="Node2D"]
script = ExtResource("9_main")

[node name="WinLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="WinLayer"]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Good job you found the exit"
horizontal_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ResetButton" type="Button" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 41.0
grow_horizontal = 0
text = "Reset"
metadata/_edit_use_anchors_ = true

[node name="QuitButton" type="Button" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -110.0
offset_top = 10.0
offset_right = -70.0
offset_bottom = 50.0
grow_horizontal = 0

[node name="QuitDialog" type="Panel" parent="HUD"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HUD/QuitDialog"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 46.0
grow_horizontal = 2
text = "Close?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/QuitDialog"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="ConfirmButton" type="Button" parent="HUD/QuitDialog/HBoxContainer"]
layout_mode = 2
text = "Close Application"

[node name="CancelButton" type="Button" parent="HUD/QuitDialog/HBoxContainer"]
layout_mode = 2
text = "Close Menu"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.08, 0.08, 0.08, 1)

[node name="PolygonRoom" type="Polygon2D" parent="."]
texture_repeat = 2
texture = ExtResource("1_00coo")
polygon = PackedVector2Array(-4, -4, 0, 256, 256, 256, 248, 0, 131, -8, 136, -320, 256, -320, 256, -440, 512, -440, 512, -320, 584, -320, 584, -64, 584, 256, 512, 256, 512, 320, 272, 320, 0, 320, 0, 568, 63.61609, 567.99994, 64, 704, 0, 704, 0, 763.87964, -120, 768, -120, 696, -192, 696, -192, 584, -128, 584, -128, 392, -384, 392, -384, 584, -312, 584, -312, 696, -384, 696, -384, 766.9576, -512, 776, -512, 712, -768, 712, -768, 960, -512, 960, -512, 896, -384, 892.7976, -384, 960, -319.1195, 960, -312, 1088, -384, 1088, -376, 1280, -316.63086, 1280, -320, 1408, -384, 1408, -384, 1474.7991, -512, 1472, -512, 1416, -760, 1416, -760, 1672, -705.01373, 1672, -704, 1800, -768, 1800, -767.99994, 1856.4171, -896, 1856, -896, 1792, -1152, 1792, -1152, 2048, -896, 2048, -896, 1984, -767.99994, 1984.6771, -768, 2048, -512, 2048, -512, 1800, -576, 1800, -574.70886, 1672, -512, 1672, -512, 1608, -384, 1601.4656, -384, 1672, -128, 1672, -125.191895, 1601.7961, 0, 1600, 0, 1680, 256, 1680, 255.99994, 1601.2373, 384, 1600, 384, 1672, 452.2912, 1671.9999, 456, 1792, 392, 1800, 391.99988, 1865.1824, 256, 1856, 256, 1792, 0, 1792, 0, 1856, -128, 1864, -128, 1792, -376, 1792, -376, 2056, -321.13165, 2056, -320, 2176, -384, 2176, -384, 2432, -128, 2432, -128, 2176, -192, 2176, -186.70068, 2056, -128, 2056, -128, 1984, 0, 1985.7915, 0, 2048, 264, 2048, 264, 1984, 391.99988, 1979.3071, 392, 2040, 451.13757, 2040, 448, 2176, 384, 2176, 384, 2242, 256, 2240, 256, 2176, 64, 2176, 64, 2432, 256, 2432, 256, 2368, 384, 2365.2405, 384, 2432, 640, 2432, 640, 2366.057, 768, 2368, 768, 2432, 1024, 2432, 1024, 2184, 768, 2184, 768, 2240, 640, 2237.3567, 640, 2176, 576, 2176, 576.53754, 2040, 640, 2040, 642.525, 1981.9235, 768, 1984, 768, 2056, 1024, 2048, 1024, 1800, 768, 1800, 768, 1856, 648, 1856, 640, 1800, 576, 1792, 576.3005, 1671.9999, 640, 1672, 640, 1601.3224, 768, 1600, 768, 1664, 1032, 1664, 1032, 1440, 768, 1440, 768, 1480, 640, 1474.8761, 640, 1416, 384, 1416, 384, 1480, 255.99994, 1477.8173, 256, 1408, 0, 1408, 0, 1472, -120, 1472, -128, 1408, -184, 1408, -190.71826, 1280, -128, 1280, -120, 1088, -192, 1088, -192, 968, -120, 960, -120, 896, 0, 895.94147, 0, 960, 256, 960, 256.00006, 898.2782, 384, 896, 384, 1024, 450.77698, 1024, 448, 1144, 384, 1152, 386.18958, 1215.4962, 256, 1216, 256, 1152, 0, 1152, 0, 1344, 264, 1344, 390.6101, 1343.6904, 392, 1384, 640, 1384, 639.99994, 1342.6316, 768, 1344, 768, 1416, 1032, 1408, 1032, 1152, 768, 1144, 768, 1216, 639.99994, 1218.6223, 640, 1152, 576, 1144, 575.495, 1024, 640, 1024, 640.00006, 959.438, 776, 960, 1024, 960, 1024, 776, 768, 768, 776, 832, 640.00006, 833.5254, 640, 768, 384, 768, 256.00006, 770.5022, 256, 704, 192, 704, 194.29608, 567.99994, 264, 568, 264, 448, 511.99988, 450.13922, 512, 512, 776, 512, 776, 252.0716, 704, 248, 696, -72, 704, -320, 760, -320, 760, -584, 512, -584, 261, -581, -122, -587, -120, -320, 0, -320)
script = ExtResource("2_dnqvi")
texture_wall = ExtResource("3_i178v")

[node name="WallCollision" type="StaticBody2D" parent="PolygonRoom"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PolygonRoom/WallCollision"]
build_mode = 1
polygon = PackedVector2Array(-4, -4, 0, 256, 256, 256, 248, 0, 131, -8, 136, -320, 256, -320, 256, -440, 512, -440, 512, -320, 584, -320, 584, -64, 584, 256, 512, 256, 512, 320, 272, 320, 0, 320, 0, 568, 63.61609, 567.99994, 64, 704, 0, 704, 0, 763.87964, -120, 768, -120, 696, -192, 696, -192, 584, -128, 584, -128, 392, -384, 392, -384, 584, -312, 584, -312, 696, -384, 696, -384, 766.9576, -512, 776, -512, 712, -768, 712, -768, 960, -512, 960, -512, 896, -384, 892.7976, -384, 960, -319.1195, 960, -312, 1088, -384, 1088, -376, 1280, -316.63086, 1280, -320, 1408, -384, 1408, -384, 1474.7991, -512, 1472, -512, 1416, -760, 1416, -760, 1672, -705.01373, 1672, -704, 1800, -768, 1800, -767.99994, 1856.4171, -896, 1856, -896, 1792, -1152, 1792, -1152, 2048, -896, 2048, -896, 1984, -767.99994, 1984.6771, -768, 2048, -512, 2048, -512, 1800, -576, 1800, -574.70886, 1672, -512, 1672, -512, 1608, -384, 1601.4656, -384, 1672, -128, 1672, -125.191895, 1601.7961, 0, 1600, 0, 1680, 256, 1680, 255.99994, 1601.2373, 384, 1600, 384, 1672, 452.2912, 1671.9999, 456, 1792, 392, 1800, 391.99988, 1865.1824, 256, 1856, 256, 1792, 0, 1792, 0, 1856, -128, 1864, -128, 1792, -376, 1792, -376, 2056, -321.13165, 2056, -320, 2176, -384, 2176, -384, 2432, -128, 2432, -128, 2176, -192, 2176, -186.70068, 2056, -128, 2056, -128, 1984, 0, 1985.7915, 0, 2048, 264, 2048, 264, 1984, 391.99988, 1979.3071, 392, 2040, 451.13757, 2040, 448, 2176, 384, 2176, 384, 2242, 256, 2240, 256, 2176, 64, 2176, 64, 2432, 256, 2432, 256, 2368, 384, 2365.2405, 384, 2432, 640, 2432, 640, 2366.057, 768, 2368, 768, 2432, 1024, 2432, 1024, 2184, 768, 2184, 768, 2240, 640, 2237.3567, 640, 2176, 576, 2176, 576.53754, 2040, 640, 2040, 642.525, 1981.9235, 768, 1984, 768, 2056, 1024, 2048, 1024, 1800, 768, 1800, 768, 1856, 648, 1856, 640, 1800, 576, 1792, 576.3005, 1671.9999, 640, 1672, 640, 1601.3224, 768, 1600, 768, 1664, 1032, 1664, 1032, 1440, 768, 1440, 768, 1480, 640, 1474.8761, 640, 1416, 384, 1416, 384, 1480, 255.99994, 1477.8173, 256, 1408, 0, 1408, 0, 1472, -120, 1472, -128, 1408, -184, 1408, -190.71826, 1280, -128, 1280, -120, 1088, -192, 1088, -192, 968, -120, 960, -120, 896, 0, 895.94147, 0, 960, 256, 960, 256.00006, 898.2782, 384, 896, 384, 1024, 450.77698, 1024, 448, 1144, 384, 1152, 386.18958, 1215.4962, 256, 1216, 256, 1152, 0, 1152, 0, 1344, 264, 1344, 390.6101, 1343.6904, 392, 1384, 640, 1384, 639.99994, 1342.6316, 768, 1344, 768, 1416, 1032, 1408, 1032, 1152, 768, 1144, 768, 1216, 639.99994, 1218.6223, 640, 1152, 576, 1144, 575.495, 1024, 640, 1024, 640.00006, 959.438, 776, 960, 1024, 960, 1024, 776, 768, 768, 776, 832, 640.00006, 833.5254, 640, 768, 384, 768, 256.00006, 770.5022, 256, 704, 192, 704, 194.29608, 567.99994, 264, 568, 264, 448, 511.99988, 450.13922, 512, 512, 776, 512, 776, 252.0716, 704, 248, 696, -72, 704, -320, 760, -320, 760, -584, 512, -584, 261, -581, -122, -587, -120, -320, 0, -320)

[node name="WallVisuals" type="Line2D" parent="PolygonRoom"]
points = PackedVector2Array(-4, -4, 0, 256, 256, 256, 248, 0, 131, -8, 136, -320, 256, -320, 256, -440, 512, -440, 512, -320, 584, -320, 584, -64, 584, 256, 512, 256, 512, 320, 272, 320, 0, 320, 0, 568, 63.61609, 567.99994, 64, 704, 0, 704, 0, 763.87964, -120, 768, -120, 696, -192, 696, -192, 584, -128, 584, -128, 392, -384, 392, -384, 584, -312, 584, -312, 696, -384, 696, -384, 766.9576, -512, 776, -512, 712, -768, 712, -768, 960, -512, 960, -512, 896, -384, 892.7976, -384, 960, -319.1195, 960, -312, 1088, -384, 1088, -376, 1280, -316.63086, 1280, -320, 1408, -384, 1408, -384, 1474.7991, -512, 1472, -512, 1416, -760, 1416, -760, 1672, -705.01373, 1672, -704, 1800, -768, 1800, -767.99994, 1856.4171, -896, 1856, -896, 1792, -1152, 1792, -1152, 2048, -896, 2048, -896, 1984, -767.99994, 1984.6771, -768, 2048, -512, 2048, -512, 1800, -576, 1800, -574.70886, 1672, -512, 1672, -512, 1608, -384, 1601.4656, -384, 1672, -128, 1672, -125.191895, 1601.7961, 0, 1600, 0, 1680, 256, 1680, 255.99994, 1601.2373, 384, 1600, 384, 1672, 452.2912, 1671.9999, 456, 1792, 392, 1800, 391.99988, 1865.1824, 256, 1856, 256, 1792, 0, 1792, 0, 1856, -128, 1864, -128, 1792, -376, 1792, -376, 2056, -321.13165, 2056, -320, 2176, -384, 2176, -384, 2432, -128, 2432, -128, 2176, -192, 2176, -186.70068, 2056, -128, 2056, -128, 1984, 0, 1985.7915, 0, 2048, 264, 2048, 264, 1984, 391.99988, 1979.3071, 392, 2040, 451.13757, 2040, 448, 2176, 384, 2176, 384, 2242, 256, 2240, 256, 2176, 64, 2176, 64, 2432, 256, 2432, 256, 2368, 384, 2365.2405, 384, 2432, 640, 2432, 640, 2366.057, 768, 2368, 768, 2432, 1024, 2432, 1024, 2184, 768, 2184, 768, 2240, 640, 2237.3567, 640, 2176, 576, 2176, 576.53754, 2040, 640, 2040, 642.525, 1981.9235, 768, 1984, 768, 2056, 1024, 2048, 1024, 1800, 768, 1800, 768, 1856, 648, 1856, 640, 1800, 576, 1792, 576.3005, 1671.9999, 640, 1672, 640, 1601.3224, 768, 1600, 768, 1664, 1032, 1664, 1032, 1440, 768, 1440, 768, 1480, 640, 1474.8761, 640, 1416, 384, 1416, 384, 1480, 255.99994, 1477.8173, 256, 1408, 0, 1408, 0, 1472, -120, 1472, -128, 1408, -184, 1408, -190.71826, 1280, -128, 1280, -120, 1088, -192, 1088, -192, 968, -120, 960, -120, 896, 0, 895.94147, 0, 960, 256, 960, 256.00006, 898.2782, 384, 896, 384, 1024, 450.77698, 1024, 448, 1144, 384, 1152, 386.18958, 1215.4962, 256, 1216, 256, 1152, 0, 1152, 0, 1344, 264, 1344, 390.6101, 1343.6904, 392, 1384, 640, 1384, 639.99994, 1342.6316, 768, 1344, 768, 1416, 1032, 1408, 1032, 1152, 768, 1144, 768, 1216, 639.99994, 1218.6223, 640, 1152, 576, 1144, 575.495, 1024, 640, 1024, 640.00006, 959.438, 776, 960, 1024, 960, 1024, 776, 768, 768, 776, 832, 640.00006, 833.5254, 640, 768, 384, 768, 256.00006, 770.5022, 256, 704, 192, 704, 194.29608, 567.99994, 264, 568, 264, 448, 511.99988, 450.13922, 512, 512, 776, 512, 776, 252.0716, 704, 248, 696, -72, 704, -320, 760, -320, 760, -584, 512, -584, 261, -581, -122, -587, -120, -320, 0, -320, -4, -4)
width = 16.0
texture = ExtResource("3_i178v")
texture_mode = 1

[node name="ShadowExtruder" type="Node2D" parent="PolygonRoom"]
visible = false
script = ExtResource("4_qtn3g")

[node name="Debris" parent="." instance=ExtResource("6_ngroq")]
position = Vector2(50, 50)
rotation = 0.5

[node name="greenlamp" type="PointLight2D" parent="."]
position = Vector2(104, 104)
color = Color(0, 1, 0, 1)
energy = 1.5
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.3

[node name="greenlamp2" type="PointLight2D" parent="."]
position = Vector2(-648, 1928)
color = Color(0, 1, 0, 1)
energy = 1.5
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.3

[node name="greenlamp3" type="PointLight2D" parent="."]
position = Vector2(520, 1264)
color = Color(0, 1, 0, 1)
energy = 1.5
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.3

[node name="greenlamp4" type="PointLight2D" parent="."]
position = Vector2(520, 2264)
color = Color(0, 1, 0, 1)
energy = 1.5
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.3

[node name="whitelamp" type="PointLight2D" parent="."]
position = Vector2(100, -192)
energy = 0.5
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.2

[node name="whitelamp2" type="PointLight2D" parent="."]
position = Vector2(384, -496)
energy = 0.5
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.2

[node name="whitelamp3" type="PointLight2D" parent="."]
position = Vector2(640, -160)
energy = 0.5
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.2

[node name="whitelamp4" type="PointLight2D" parent="."]
position = Vector2(376, 384)
energy = 0.5
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.2

[node name="finishlamp" type="PointLight2D" parent="."]
position = Vector2(-264, 2304)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.4

[node name="redlamp" type="PointLight2D" parent="."]
position = Vector2(72, -480)
color = Color(1, 0, 0, 1)
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="redlamp2" type="PointLight2D" parent="."]
position = Vector2(-256, 1544)
color = Color(1, 0, 0, 1)
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="redlamp3" type="PointLight2D" parent="."]
position = Vector2(136, 1552)
color = Color(1, 0, 0, 1)
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="redlamp4" type="PointLight2D" parent="."]
position = Vector2(-640, 1560)
color = Color(1, 0, 0, 1)
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="redlamp5" type="PointLight2D" parent="."]
position = Vector2(-640, 832)
color = Color(1, 0, 0, 1)
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="redlamp6" type="PointLight2D" parent="."]
position = Vector2(128, 1248)
color = Color(1, 0, 0, 1)
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="redlamp7" type="PointLight2D" parent="."]
position = Vector2(160, 2320)
color = Color(1, 0, 0, 1)
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="redlamp8" type="PointLight2D" parent="."]
position = Vector2(-1024, 1928)
color = Color(1, 0, 0, 1)
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="yellowlamp" type="PointLight2D" parent="."]
position = Vector2(640, -464)
color = Color(0.9882353, 1, 0, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.3

[node name="yellowlamp2" type="PointLight2D" parent="."]
position = Vector2(136, 432)
color = Color(0.9882353, 1, 0, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.3

[node name="yellowlamp3" type="PointLight2D" parent="."]
position = Vector2(-256, 832)
color = Color(0.9882353, 1, 0, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.3

[node name="yellowlamp4" type="PointLight2D" parent="."]
position = Vector2(-248, 1184)
color = Color(0.9882353, 1, 0, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.3

[node name="yellowlamp6" type="PointLight2D" parent="."]
position = Vector2(512, 1552)
color = Color(0.9882353, 1, 0, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.3

[node name="yellowlamp7" type="PointLight2D" parent="."]
position = Vector2(-248, 1928)
color = Color(0.9882353, 1, 0, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.3

[node name="yellowlamp5" type="PointLight2D" parent="."]
position = Vector2(-256, 504)
color = Color(0.9882353, 1, 0, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.3

[node name="bluelamp" type="PointLight2D" parent="."]
position = Vector2(640, 360)
color = Color(0.046002887, 0.2838374, 1, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="bluelamp2" type="PointLight2D" parent="."]
position = Vector2(128, 832)
color = Color(0.046002887, 0.2838374, 1, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="bluelamp3" type="PointLight2D" parent="."]
position = Vector2(520, 896)
color = Color(0.046002887, 0.2838374, 1, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="bluelamp4" type="PointLight2D" parent="."]
position = Vector2(888, 880)
color = Color(0.046002887, 0.2838374, 1, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="bluelamp5" type="PointLight2D" parent="."]
position = Vector2(896, 1280)
color = Color(0.046002887, 0.2838374, 1, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="bluelamp6" type="PointLight2D" parent="."]
position = Vector2(504, 1928)
color = Color(0.046002887, 0.2838374, 1, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="bluelamp7" type="PointLight2D" parent="."]
position = Vector2(896, 1928)
color = Color(0.046002887, 0.2838374, 1, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="bluelamp8" type="PointLight2D" parent="."]
position = Vector2(128, 1920)
color = Color(0.046002887, 0.2838374, 1, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="bluelamp10" type="PointLight2D" parent="."]
position = Vector2(896, 2312)
color = Color(0.046002887, 0.2838374, 1, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="bluelamp9" type="PointLight2D" parent="."]
position = Vector2(896, 1544)
color = Color(0.046002887, 0.2838374, 1, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("7_216fe")
texture_scale = 0.35

[node name="Arrow" type="Sprite2D" parent="."]
position = Vector2(72.000015, 48)
rotation = 1.5707964
scale = Vector2(0.33607426, 0.30458042)
texture = ExtResource("8_dnqvi")

[node name="Arrow2" type="Sprite2D" parent="."]
position = Vector2(144, -512)
rotation = 3.1415927
scale = Vector2(0.33607426, 0.30458042)
texture = ExtResource("8_dnqvi")

[node name="Arrow3" type="Sprite2D" parent="."]
position = Vector2(640, -376)
rotation = 4.712389
scale = Vector2(0.33607426, 0.30458042)
texture = ExtResource("8_dnqvi")

[node name="Arrow4" type="Sprite2D" parent="."]
position = Vector2(560.00006, 360)
rotation = 6.2831855
scale = Vector2(0.33607426, 0.30458042)
texture = ExtResource("8_dnqvi")

[node name="Player" parent="." instance=ExtResource("5_tgxag")]
position = Vector2(96, 48)

[node name="Final Room" type="Area2D" parent="."]
position = Vector2(-237.99997, 2299.9998)
scale = Vector2(-13.692933, -6.002226)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Final Room"]
position = Vector2(0.10971451, 0.93167114)
scale = Vector2(0.9999999, 0.9999999)
shape = SubResource("RectangleShape2D_dnqvi")

[node name="Final Room" type="Area2D" parent="Final Room"]
position = Vector2(-255, 2308.0002)
scale = Vector2(-13.692933, -6.002226)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Final Room/Final Room"]
position = Vector2(0.10971451, 0.93167114)
scale = Vector2(0.9999999, 0.9999999)
shape = SubResource("RectangleShape2D_dnqvi")

[connection signal="pressed" from="HUD/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="HUD/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HUD/QuitDialog/HBoxContainer/ConfirmButton" to="." method="_on_confirm_quit_pressed"]
[connection signal="pressed" from="HUD/QuitDialog/HBoxContainer/CancelButton" to="." method="_on_cancel_quit_pressed"]
[connection signal="body_entered" from="Final Room" to="." method="_on_final_room_body_entered"]
